@@ -1,3 +1,8 @@
+2008-01-28  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* ProvideAlternativeNamesForOperatorOverloadsTest.cs: Adapt for
+	API changes in MethodSignature.
+
 2008-01-27  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* TypesShouldBeInsideNamespacesRule.cs: Don't report nested types 
